--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <title>Document</title>
-    <link rel=stylesheet type="text/css" href="css/main.css">  
+ <meta charset="UTF-8"/>
+  <!-- Anything in the body will be displayed -->
+  <title>My Personal Profile</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+ </head>
+ <body>
+  <img src="https://scontent.xx.fbcdn.net/v/t31.0-8/15975276_121378688366776_1278928563639740321_o.jpg?oh=f3653f373fe36346b45aae3af759400f&oe=59195245" alt="An image of me" width="15%"/>
+  <h1>Maxwell J. Winston</h1>
+  <h2>About me:</h2>
+     <p>I am 21 years old, and my birthday is on September 22.  I was born in High Point, North Carolina and currently reside in Cheney, Washington.  <br>I currently am in my “Junior” year at Eastern Washington University as a Computer Science Major. My hobbies include cooking, writing, and playing video games.  It is my dream to one day become a Game Programmer/Designer.</br>
+</p>
+<h2>Top 3 Favorite Movies</h2>
 
-</head>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <ol>
+        <li><a href="https://www.amazon.com/Yellow-Submarine-Blu-ray-Beatles/dp/B0079J28NW/ref=sr_1_1?ie=UTF8&qid=1484698338&sr=8-1&keywords=yellow+submarine">Yellow Submarine</a></li>
+        <li><a href="https://www.amazon.com/Shawshank-Redemption-Tim-Robbins/dp/B001XUJNJ0/ref=sr_1_1?ie=UTF8&qid=1484698410&sr=8-1&keywords=the+shawshank+redemption">The Shawshank Redemption</a></li>
+        <li><a href="https://www.amazon.com/Monty-Python-Holy-Grail-Special/dp/B00005O3VC/ref=sr_1_2?ie=UTF8&qid=1484698440&sr=8-2&keywords=monty+python+and+the+holy+grail">Monty Python And The Holy Grail</a></li>
+
+     </ol>
+<h2>Favorite Book:</h2>
+     <h4>World War Z: An Oral History of the Zombie War</h4>
+      <img src="https://upload.wikimedia.org/wikipedia/en/7/76/World_War_Z_book_cover.jpg" alt="An Image of the cover of World War Z">
+      <br><a href="https://www.amazon.com/World-War-Oral-History-Zombie/dp/0307346617/ref=sr_1_1?ie=UTF8&qid=1484698718&sr=8-1&keywords=world+war+z">Link to the Amazon.com Listing</a></br>
+ </body>
 </html>
+
+<!--
+Content Priority Guide
+
+1.	Personal Image
+https://scontent.xx.fbcdn.net/v/t31.0-8/15975276_121378688366776_1278928563639740321_o.jpg?oh=f3653f373fe36346b45aae3af759400f&oe=59195245
+2.	Name (Your Name)
+<h1>Maxwell J. Winston
+3.	About Me (4-5 Sentences) <h2>
+I am 21 years old, and my birthday is on September 22.  I was born in High Point, North Carolina and currently reside in Cheney, Washington.  I currently am in my “Junior” year at Eastern Washington University as a Computer Science Major.  My hobbies include cooking, writing, and playing video games.  It is my dream to one day become a Game Programmer/Designer.
+4.	Top 3 Favorite Movies <ol>
+1.	<li>Yellow Submarine <a href="https://www.amazon.com/Yellow-Submarine-Blu-ray-Beatles/dp/B0079J28NW/ref=sr_1_1?ie=UTF8&qid=1484698338&sr=8-1&keywords=yellow+submarine">
+2.	The Shawshank Redemption
+3.	Monty Python & The Holy Grail
+5.	Favorite Book
+World War Z: An Oral History of the Zombie War
+6.	Image of cover of favorite book
+ <img src=https://upload.wikimedia.org/wikipedia/en/7/76/World_War_Z_book_cover.jpg alt=”An Image of the cover of World War Z”>
+7.	Link to Amazon listing of favorite book
+https://www.amazon.com/World-War-Oral-History-Zombie/dp/0307346617/ref=sr_1_1?ie=UTF8&qid=1484697722&sr=8-1&keywords=world+war+zTop of Form
+-->
