--- a/index.html
+++ b/index.html
@@ -1,49 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8"/>
-  <!-- Anything in the body will be displayed -->
-  <title>My Personal Profile</title>
-  <link rel="stylesheet" type="text/css" href="css/main.css">
- </head>
- <body>
-  <img src="https://scontent.xx.fbcdn.net/v/t31.0-8/15975276_121378688366776_1278928563639740321_o.jpg?oh=f3653f373fe36346b45aae3af759400f&oe=59195245" alt="An image of me" width="15%"/>
-  <h1>Maxwell J. Winston</h1>
-  <h2>About me:</h2>
-     <p>I am 21 years old, and my birthday is on September 22.  I was born in High Point, North Carolina and currently reside in Cheney, Washington.  <br>I currently am in my “Junior” year at Eastern Washington University as a Computer Science Major. My hobbies include cooking, writing, and playing video games.  It is my dream to one day become a Game Programmer/Designer.</br>
-</p>
-<h2>Top 3 Favorite Movies</h2>
+  <meta charset="UTF-8" />
+  <title>Final Profile Project</title>
+  <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline|Jura|Old+Standard+TT|Playfair+Display|UnifrakturMaguntia" rel="stylesheet">
+</head>
+<body>
+  <div class="top">
+    <header>Maxwell Winston <img src="#"></header>
+  
+  </div>
+<div id="body-content">
+<div class="sec1">
+  <h1 class="section-header">About Me:</h1>
+<span class="section-content">
+Hi there, my name is Maxwell Winston! I am 21 years old.  I was born in High Point, North Carolina and currently reside in Cheney, Washington.  I am in my “Junior” year at Eastern Washington University as a  Computer Science Major. My hobbies include cooking, writing, and playing video games. It is my dream to one day become a Game Programmer/Designer.
+  </span>
+</div>  
+  <h1 class="section-header  section-top">My Top 3 Favorite Films</h1>
+<div class="sec2">
+  <h2 class="section-header sec-title" id="Yellow-Submarine">Yellow Submarine</h2>
+ <span class="section-content">
+  <h3>SYNOPSIS:</h3>
+  The Beatles: Yellow Submarine was an animated film released in 1968.  The film tells the tale of The Beatles travelling on the Yellow Submarine to save a bright, colorful and musical paradise called 
+Pepperland from the evil Blue Meanies.
+  <h3>My thoughts:</h3>  Imagine The Odyssey with the humor of Monty Python with animation based on an LSD drug trip and you should have a general idea of what the film is. While the story is certainly odd, the visuals and soundtrack for the movie, not to mention all the hilarious lines is what makes this my all-time favorite film.  Not else to say.
+  </span>
+  </div>
+<div class="sec1">
+<div id="Shawshank" class="sec-title">
 
-    <ol>
-        <li><a href="https://www.amazon.com/Yellow-Submarine-Blu-ray-Beatles/dp/B0079J28NW/ref=sr_1_1?ie=UTF8&qid=1484698338&sr=8-1&keywords=yellow+submarine">Yellow Submarine</a></li>
-        <li><a href="https://www.amazon.com/Shawshank-Redemption-Tim-Robbins/dp/B001XUJNJ0/ref=sr_1_1?ie=UTF8&qid=1484698410&sr=8-1&keywords=the+shawshank+redemption">The Shawshank Redemption</a></li>
-        <li><a href="https://www.amazon.com/Monty-Python-Holy-Grail-Special/dp/B00005O3VC/ref=sr_1_2?ie=UTF8&qid=1484698440&sr=8-2&keywords=monty+python+and+the+holy+grail">Monty Python And The Holy Grail</a></li>
+  <span class="section-header">The <br>Shawshank Redemption</br></span>
+  
+  </div>
+<span class="section-content">
+  <h3>SYNOPSIS:</h3>
+ The Shawshank Redemption tells the tale of Andy Dufresne, played by Tim Robbins, a banker wrongly convicted of killing his wife who is sent to Shawshank Penitentiary. The majority of the film is just Andy’s experiences in prison with particular focus on his friendship with another prisoner named Ellis Boyd “Red” Redding, played by Morgan Freeman. 
+  
+  <h3>My thoughts:</h3> 
+There’s not much I can say about why I like the film other than Tim Robbins and Morgan Freeman work really well together, the supporting characters are great, the villains are great, and it features some of the best dialogue ever in my eyes.  The ending monologue about rehabilitation by Morgan Freeman is one of my favorite monologues in all of cinema.
+   </span>
+  </div>
+  <div class="sec2">
+    <h2 class="section-header sec-title" id="Monty-Python">Monty Python<br>& The Holy Grail</br></h2>  
+<span class="section-content">
+  <h3>Synopsis:</h3>   Monty Python and the Holy Grail is a comedic take on the story of King Arthur and the Knights of the Round Table and their quest to find the Holy Grail for a rather grouchy God.
 
-     </ol>
-<h2>Favorite Book:</h2>
-     <h4>World War Z: An Oral History of the Zombie War</h4>
-      <img src="https://upload.wikimedia.org/wikipedia/en/7/76/World_War_Z_book_cover.jpg" alt="An Image of the cover of World War Z">
-      <br><a href="https://www.amazon.com/World-War-Oral-History-Zombie/dp/0307346617/ref=sr_1_1?ie=UTF8&qid=1484698718&sr=8-1&keywords=world+war+z">Link to the Amazon.com Listing</a></br>
- </body>
+  <h3>My thoughts:</h3>  An icon of comedy, the film is packed to the brim with jokes and comedy.  Each performer has their time to shine with each side story involving the adventures of the individial knights providing plenty of cool scenarios for comedic possibilities 
+  </span>
+</div>  
+  
+<h1 class="section-header section-top">My Favorite Book</h1>
+<div class="sec1">
+  <div id="WorldWarZ" class="sec-title">
+  <h2 class="section-header">World War Z: An Oral History of The Zombie War</h2>
+  <h1>By Max Brooks</h1>
+  </div>
+<span class=section-content>
+ <h3>Plot Summary:</h3>
+  World War Z: An Oral History of the Zombie War (2006) is an apocalyptic horror novel by Max Brooks. The novel is a collection of individual accounts narrated by an agent of the United Nations Postwar Commission, following the devastating global conflict against the zombie plague. Other passages record a decade-long desperate struggle, as experienced by people of various nationalities. The personal accounts also describe the resulting social, political, religious, and environmental changes.
+  
+  <h3>My Thoughts:</h3> 
+The reason why I enjoy this book so much is the subversion of the traditional zombie apocalpyse narrative of hopelessness, evils of humanity, and survival. It feels like a realistic depiction of the years after aftermath of a zombie apocalpyse. Seeing events unfold from various perspectives from government officials to average citizens, with a variety of tones for each one.  One of my favorites is a story from a soldier who fights in one of the first battles with the zombies.  Amazing book from start to finish...wish I could say the same about the film.
+  </span>
+  </div>
+  </div>
+</body>
 </html>
-
-<!--
-Content Priority Guide
-
-1.	Personal Image
-https://scontent.xx.fbcdn.net/v/t31.0-8/15975276_121378688366776_1278928563639740321_o.jpg?oh=f3653f373fe36346b45aae3af759400f&oe=59195245
-2.	Name (Your Name)
-<h1>Maxwell J. Winston
-3.	About Me (4-5 Sentences) <h2>
-I am 21 years old, and my birthday is on September 22.  I was born in High Point, North Carolina and currently reside in Cheney, Washington.  I currently am in my “Junior” year at Eastern Washington University as a Computer Science Major.  My hobbies include cooking, writing, and playing video games.  It is my dream to one day become a Game Programmer/Designer.
-4.	Top 3 Favorite Movies <ol>
-1.	<li>Yellow Submarine <a href="https://www.amazon.com/Yellow-Submarine-Blu-ray-Beatles/dp/B0079J28NW/ref=sr_1_1?ie=UTF8&qid=1484698338&sr=8-1&keywords=yellow+submarine">
-2.	The Shawshank Redemption
-3.	Monty Python & The Holy Grail
-5.	Favorite Book
-World War Z: An Oral History of the Zombie War
-6.	Image of cover of favorite book
- <img src=https://upload.wikimedia.org/wikipedia/en/7/76/World_War_Z_book_cover.jpg alt=”An Image of the cover of World War Z”>
-7.	Link to Amazon listing of favorite book
-https://www.amazon.com/World-War-Oral-History-Zombie/dp/0307346617/ref=sr_1_1?ie=UTF8&qid=1484697722&sr=8-1&keywords=world+war+zTop of Form
--->
