--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Final Profile Project</title>
   <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline|Jura|Old+Standard+TT|Playfair+Display|UnifrakturMaguntia" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
   <div class="top">
