--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="top">
-    <header>Maxwell Winston <img src="assets/ProfilePhoto.jpg" alt="Profile Image of me" id="profile-image"></header>
+    <header>Maxwell Winston </header><img src="assets/ProfilePhoto.jpg" alt="Profile Image of me" id="profile-image">
 
   </div>
 <div id="body-content">
