--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="top">
-    <header>Maxwell Winston </header><img src="assets/ProfilePhoto.jpg" alt="Profile Image of me" id="profile-image">
+    <header><span id="header-content">Maxwell Winston</span><img src="assets/ProfilePhoto.jpg" alt="Profile Image of me" id="profile-image"> </header>
 
   </div>
 <div id="body-content">
