--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Final Profile Project</title>
-  <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline|Jura|Old+Standard+TT|Playfair+Display|UnifrakturMaguntia" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline|Jura|Old+Standard+TT|Playfair+Display:400,700|UnifrakturMaguntia" rel="stylesheet">
   <link href="css/main.css" type="text/css" rel="stylesheet">
 </head>
 <body>
