--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <div class="top">
     <span class="SocialMedia">
       <p>Contact Me:</p>
-      <img src="https://cdn4.iconfinder.com/data/icons/happily-colored-snlogo/512/gmail-email-mail-logo-circle-material.png" class="socialButton" alt="Gmail Button" id="gmail">
-      <img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-256.png" class="socialButton" id="facebook" alt="Facebook Button">
-      <img src="http://cdn.onlinewebfonts.com/svg/download_326384.png" alt="Facebook Button" class="socialButton" id="github">
+      <img src="assets/gmail.png" class="socialButton" alt="Gmail Button" id="gmail">
+      <img src="assets/facebook.png" class="socialButton" id="facebook" alt="Facebook Button">
+      <img src="assets/github.png" alt="Github Button" class="socialButton" id="github">
     </span>
-    <header><span id="header-content">Maxwell Winston</span><img src="assets/ProfilePhoto.jpg" alt="Profile Image of me" id="profile-image"> </header>
+    <header>Maxwell Winston<img src="assets/ProfilePhoto.jpg" alt="Profile Image of me" id="profile-image"> </header>
 
   </div>
 <div id="body-content">
