--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
   <div class="top">
-    <span class="SocialMedia">
+    <header class="SocialMedia">
       <p>Contact Me:</p>
       <img src="assets/gmail.png" class="socialButton" alt="Gmail Button" id="gmail">
       <img src="assets/facebook.png" class="socialButton" id="facebook" alt="Facebook Button">
       <img src="assets/github.png" alt="Github Button" class="socialButton" id="github">
-    </span>
-    <header>Maxwell Winston<img src="assets/ProfilePhoto.jpg" alt="Profile Image of me" id="profile-image"> </header>
+    </header>
+    <div class="header">Maxwell Winston<img src="assets/ProfilePhoto.jpg" alt="Profile Image of me" id="profile-image"> </div>
 
   </div>
 <div id="body-content">
