trying to fix world war z

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ There’s not much I can say about why I like the film other than Tim Robbins an
 <h1 class="section-header section-top">My Favorite Book</h1>
 <div class="sec1">
   <div id="WorldWarZ" class="sec-title">
-  <h2 class="section-header">World War Z: An Oral History of The Zombie War</h2>
+  <h2 class="section-header worldwarz">World War Z: An Oral History of The Zombie War</h2>
   <h1>By Max Brooks</h1>
   </div>
 <span class=section-content>
