--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <div id="body-content">
 <div class="sec1">
   <h1 class="section-header">About Me:</h1>
-<span class="section-content">
-Hi there, my name is Maxwell Winston! I am 21 years old.  I was born in High Point, North Carolina and currently reside in Cheney, Washington.  I am in my “Junior” year at Eastern Washington University as a  Computer Science Major. My hobbies include cooking, writing, and playing video games. It is my dream to one day become a Game Programmer/Designer.
+<span class="section-content aboutme">
+<p>Hi there, my name is Maxwell Winston! I am 21 years old.  I was born in High Point, North Carolina and currently reside in Cheney, Washington.  I am in my “Junior” year at Eastern Washington University as a  Computer Science Major. My hobbies include cooking, writing, and playing video games. It is my dream to one day become a Game Programmer/Designer.</p>
   </span>
 </div>
   <h1 class="section-header  section-top">My Top 3 Favorite Films</h1>
