Trying to fix top again

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img src="assets/facebook.png" class="socialButton" id="facebook" alt="Facebook Button">
       <img src="assets/github.png" alt="Github Button" class="socialButton" id="github">
     </header>
-    <div class="header">Maxwell Winston<img src="assets/ProfilePhoto.jpg" alt="Profile Image of me" id="profile-image"> </div>
+    <div class="header"><p>Maxwell Winston</p><img src="assets/ProfilePhoto.jpg" alt="Profile Image of me" id="profile-image"> </div>
 
   </div>
 <div id="body-content">
