--- a/index.html
+++ b/index.html
@@ -72,5 +72,10 @@ The reason why I enjoy this book so much is the subversion of the traditional zo
   </span>
   </div>
   </div>
+
+  <footer>
+  <a href="#top"><img src="http://www.freeiconspng.com/uploads/arrow-icon-clip-art-file-down-arrow-icon-png-balin-icon-arrow-right--32.png" alt="Return To Top" class="returnArrow"></a>
+
+</footer>
 </body>
 </html>
